@@ -1,4 +1,4 @@
-# data file for the FLTK User Interface Designer (FLUID)
+# data file for the eFLTK User Interface Designer (eFLUID)
 version 2,0003 
 images_dir ./ 
 i18n 
@@ -7,12 +7,16 @@ code_name {.cpp}
 gridx 5 
 gridy 5 
 snap 3
+decl {// Panel config for EDE is (C) Copyright 2001-2002 by Martin Pekar, this program is provided under the terms of GNU GPL v.2, see file COPYING for more information.} {} 
 
 decl {\#include <efltk/Fl_File_Dialog.h>} {} 
 
 decl {\#include <efltk/Fl_Config.h>} {} 
 
 decl {\#include <efltk/Fl_Locale.h>} {} 
+
+decl {\#include <edeconf.h>} {selected
+} 
 
 decl {\#include "util.h"} {} 
 
@@ -23,75 +27,72 @@ Function {} {open
   code {fl_init_locale_support("epanelconf", PREFIX"/share/locale");} {}
   Fl_Window panelWindow {
     label {Panel settings} open
-    xywh {118 179 405 264} hide
+    xywh {265 115 405 274} resizable visible
   } {
     Fl_Button {} {
       label {&Apply}
       callback {write_config();
 send_workspaces();}
-      xywh {237 235 80 25}
+      xywh {237 245 80 25}
     }
     Fl_Button {} {
       label {&Close}
       callback {Fl::first_window()->hide();}
-      private xywh {323 235 80 25}
+      private xywh {323 245 80 25}
     }
     Fl_Tabs {} {open
-      xywh {0 2 403 230}
+      xywh {0 2 403 238} color 0xfffffffe
     } {
       Fl_Group {} {
-        label Utilities open
-        xywh {0 22 403 208}
+        label {&Options} open
+        xywh {1 25 401 212}
       } {
         Fl_Group {} {
-          label {Panel utilities} open
-          xywh {5 20 395 110} align 5 box ENGRAVED_BOX
+          label {Panel applets} open
+          xywh {5 20 395 93} align FL_ALIGN_TOP|FL_ALIGN_LEFT box ENGRAVED_BOX
         } {
-          Fl_Input vcProgram {
-            label {Volume control program:}
-            xywh {10 22 285 23} align 5
+          Fl_Check_Button showdesktop_check {
+            label {Show &desktop button}
+            xywh {9 8 160 25}
           }
-          Fl_Button {} {
-            label {&Browse...}
-            callback {char *file_types = _("Executables (*.*), *, All files (*.*), *");
-const char *fileName = fl_select_file(0, file_types, _("File selection..."));    
-if (fileName) { 
-  vcProgram->value(fileName);
-}} selected
-            private xywh {305 20 80 25}
+          Fl_Check_Button workspace_check {
+            label {Wor&kspace switcher}
+            xywh {9 33 160 25}
           }
-          Fl_Input tdProgram {
-            label {Time and date program:}
-            xywh {10 67 285 23} align 5
+          Fl_Check_Button qlb_check {
+            label {&Quick launch bar}
+            xywh {9 58 160 25}
           }
-          Fl_Button {} {
-            label {Br&owse...}
-            callback {char *file_types = _("Executables (*.*), *, All files (*.*), *");
-const char *fileName = fl_select_file(0, file_types, _("File selection..."));    
-if (fileName) 
-{ 
-  tdProgram->value(fileName);
-}}
-            private xywh {305 65 80 25}
+          Fl_Check_Button runbrowser_check {
+            label {&Command line}
+            xywh {189 8 160 25}
+          }
+          Fl_Check_Button soundmixer_check {
+            label {&Sound mixer}
+            xywh {189 58 160 25}
+          }
+          Fl_Check_Button cpumonitor_check {
+            label {&Processor load graph}
+            xywh {189 33 160 25}
           }
         }
         Fl_Group {} {
           label Autohide open
-          xywh {5 150 395 35} align 5 box ENGRAVED_BOX
+          xywh {5 133 395 35} align FL_ALIGN_TOP|FL_ALIGN_LEFT box ENGRAVED_BOX
           extra_code {;}
         } {
           Fl_Check_Button autohide_check {
-            label {Automaticaly hide panel}
+            label {&Automaticaly hide panel}
             xywh {5 5 385 25}
           }
         }
       }
       Fl_Group {} {
-        label Workspaces open
-        xywh {0 22 403 208} hide
+        label {&Workspaces} open
+        xywh {1 25 401 212} hide
       } {
         Fl_Value_Slider ws_slider {
-          label {Number of workspaces: }
+          label {&Number of workspaces: }
           callback {int val = int(ws_slider->value());
 for(int n=0; n<8; n++) {
   if(n<val)
@@ -99,69 +100,69 @@ for(int n=0; n<8; n++) {
   else
     workspaces[n]->deactivate();
 }}
-          xywh {145 10 255 20} type {HORIZONTAL|Fl_Slider::TICK_BELOW} align 132 box THIN_DOWN_BOX button_box THIN_UP_BOX step 1
+          xywh {145 10 255 20} type {HORIZONTAL|Fl_Slider::TICK_BELOW} align FL_ALIGN_LEFT|FL_ALIGN_WRAP box THIN_DOWN_BOX button_box THIN_UP_BOX step 1
           extra_code {o->step(1); ;
 o->range(1,8);}
         }
         Fl_Group {} {
           label {Workspace names:} open
-          xywh {5 60 395 130} align 5 box ENGRAVED_BOX
+          xywh {5 60 395 130} align FL_ALIGN_TOP|FL_ALIGN_LEFT box ENGRAVED_BOX
           extra_code {;}
         } {
           Fl_Input {} {
-            label {WS 1:}
+            label {WS &1:}
             xywh {55 10 115 20} deactivate
             extra_code {workspaces[0] = o; ;}
           }
           Fl_Input {} {
-            label {WS 2:}
+            label {WS &2:}
             xywh {55 40 115 20} deactivate
             extra_code {workspaces[1] = o; ;}
           }
           Fl_Input {} {
-            label {WS 3:}
+            label {WS &3:}
             xywh {55 70 115 20} deactivate
             extra_code {workspaces[2] = o; ;}
           }
           Fl_Input {} {
-            label {WS 4:}
+            label {WS &4:}
             xywh {55 100 115 20} deactivate
             extra_code {workspaces[3] = o; ;}
           }
           Fl_Input {} {
-            label {WS 5:}
+            label {WS &5:}
             xywh {260 10 115 20} deactivate
             extra_code {workspaces[4] = o; ;}
           }
           Fl_Input {} {
-            label {WS 6:}
+            label {WS &6:}
             xywh {260 40 115 20} deactivate
             extra_code {workspaces[5] = o; ;}
           }
           Fl_Input {} {
-            label {WS 7:}
+            label {WS &7:}
             xywh {260 70 115 20} deactivate
             extra_code {workspaces[6] = o; ;}
           }
           Fl_Input {} {
-            label {WS 8:}
+            label {WS &8:}
             xywh {260 100 115 20} deactivate
             extra_code {workspaces[7] = o; ;}
           }
         }
       }
       Fl_Group {} {
-        label Handlers open
-        xywh {0 22 403 208} hide
+        label {&Utilities} open
+        xywh {1 25 401 212} hide
       } {
         Fl_Group {} {
           label {Handlers programs} open
-          xywh {5 20 395 110} align 5 box ENGRAVED_BOX
+          xywh {5 20 395 188} align FL_ALIGN_TOP|FL_ALIGN_LEFT box ENGRAVED_BOX
           extra_code {;}
         } {
           Fl_Input browserProgram {
-            label {Internet browser:}
-            xywh {10 22 285 23} align 5
+            label {&Internet browser:}
+            xywh {10 22 285 23} align FL_ALIGN_TOP|FL_ALIGN_LEFT
           }
           Fl_Button {} {
             label {&Browse...}
@@ -173,8 +174,8 @@ if (fileName) {
             private xywh {300 20 80 25}
           }
           Fl_Input terminalProgram {
-            label {Terminal:}
-            xywh {10 67 285 23} align 5
+            label {&Terminal:}
+            xywh {10 67 285 23} align FL_ALIGN_TOP|FL_ALIGN_LEFT
           }
           Fl_Button {} {
             label {Br&owse...}
@@ -184,6 +185,33 @@ if (fileName) {
   terminalProgram->value(fileName);
 }}
             private xywh {300 65 80 25}
+          }
+          Fl_Input vcProgram {
+            label {&Volume control program:}
+            xywh {9 110 285 23} align FL_ALIGN_TOP|FL_ALIGN_LEFT
+          }
+          Fl_Button {} {
+            label {&Browse...}
+            callback {char *file_types = _("Executables (*.*), *, All files (*.*), *");
+const char *fileName = fl_select_file(0, file_types, _("File selection..."));    
+if (fileName) { 
+  vcProgram->value(fileName);
+}}
+            private xywh {304 108 80 25}
+          }
+          Fl_Input tdProgram {
+            label {Time and &date program:}
+            xywh {9 155 285 23} align FL_ALIGN_TOP|FL_ALIGN_LEFT
+          }
+          Fl_Button {} {
+            label {Br&owse...}
+            callback {char *file_types = _("Executables (*.*), *, All files (*.*), *");
+const char *fileName = fl_select_file(0, file_types, _("File selection..."));    
+if (fileName) 
+{ 
+  tdProgram->value(fileName);
+}}
+            private xywh {304 153 80 25}
           }
         }
       }
